--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>C++ HTTP Server</title>
-  </head>
+<html>
   <body>
-    <h1>Hello from C++ HTTP Server!</h1>
+    <h1>Hello from static file!</h1>
   </body>
 </html>
